--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,18 @@
     <version>1.0-SNAPSHOT</version>
 
 
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -17,6 +29,7 @@
             <artifactId>selenium-java</artifactId>
             <version>4.0.0-alpha-3</version>
         </dependency>
+        
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
